ingress/ingress-app-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: diz-app-deployment
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: diz-app-deployment.5e13843ce816477ea577.westeurope.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: diz-app-deployment
          servicePort: 80
